FlightPath 6.x Changelog
========================

2022-03-21
  Added hook to course_search, so that other modules can modify the "course rotation schedule".  See new file course_search.api.php.


2022-03-20
  Changed how we cache the course inventory.  Now using a file to cache to hard disk, making it much faster to read into memory than using multiple database queries.
  
  When applying draft changes, the courses cache file is automatically deleted and re-written.
  
  Added indexs for courses and draft_courses for the exclude and delete_flag columns.
  
  Added new cache variable which lets us know when course cache was last generated.  Users will check that variable in key places to see if they need to reload
  their course inventory from file.
  
  Moved the logic for generating and saving the course inventory to the system module, to make it easier to work with.
    

2022-03-19
  Altered prereqs module to better explain how it's hook system works.  Added prereqs.api.php to describe hooks.
  
  Added new column to advising sessions:  most_recent_session.  This will be set to 1 (one) if this is the most recent advising session (across multiple terms)
  for the student.  Otherwise, will be zero.  This helps in certain queries and reports. 
  
  Removed code which was adding the "course inventory" to the SESSION.  This was only being used in 2 places, and never when actually loading a course.  Therefor,
  it seems it is not needed.

  Added new column to student_courses: course_id.  This makes it much easier to search for specific courses in this table.  Defaults to zero (0).
  

2022-03-17
  For menu items, if there is an icon, give it an ALT tag of whatever the title of the menu is.
  
  Made sure the logo image for FlightPath had an alt tag.
  
  Made the 'Welcome to FlightPath' message on login page use the system_name variable.

  Added new modal dialog for "loading" and "updating", which dims screen and is more visible than old method that showed